// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica acp --help 1`] = `
"bioinformatica acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: bioinformatica.local)
                                                          [string] [default: "bioinformatica.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica mcp --help 1`] = `
"bioinformatica mcp

manage MCP (Model Context Protocol) servers

Commands:
  bioinformatica mcp add [name]     add an MCP server
  bioinformatica mcp list           list MCP servers and their status                  [aliases: ls]
  bioinformatica mcp auth [name]    authenticate with an OAuth-enabled MCP server
  bioinformatica mcp logout [name]  remove OAuth credentials for an MCP server
  bioinformatica mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica attach --help 1`] = `
"bioinformatica attach <url>

attach to a running bioinformatica server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to BIOINFORMATICA_SERVER_PASSWORD)      [string]
  -u, --username      basic auth username (defaults to BIOINFORMATICA_SERVER_USERNAME or
                      'bioinformatica')                                                     [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica run --help 1`] = `
"bioinformatica run [message..]

run bioinformatica with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
      --share        share the session                                                     [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running bioinformatica server (e.g., http://localhost:4096)[string]
  -p, --password     basic auth password (defaults to BIOINFORMATICA_SERVER_PASSWORD)       [string]
  -u, --username     basic auth username (defaults to BIOINFORMATICA_SERVER_USERNAME or
                     'bioinformatica')                                                      [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica debug --help 1`] = `
"bioinformatica debug

debugging and troubleshooting tools

Commands:
  bioinformatica debug config                     show resolved configuration
  bioinformatica debug lsp                        LSP debugging utilities
  bioinformatica debug rg                         ripgrep debugging utilities
  bioinformatica debug file                       file system debugging utilities
  bioinformatica debug scrap                      list all known projects
  bioinformatica debug skill                      list all available skills
  bioinformatica debug env                        inspect the local nf-core execution environment
                                                  and remediation plan (read-only)
  bioinformatica debug objective [statement]      show or set this project's standing campaign
                                                  objective (read-only without a statement)
  bioinformatica debug repeatsdb                  inspect RepeatsDB — the already-annotated set a
                                                  discovery campaign subtracts (read-only)
  bioinformatica debug sifts                      load the SIFTS PDB<->UniProt mapping and show its
                                                  version stamp (read-only, cached)
  bioinformatica debug corpus <name>              write or inspect a versioned corpus snapshot in
                                                  the project's corpus/ folder
  bioinformatica debug glue [directory]           list or materialise the coordinate-bookkeeping
                                                  scripts (SEQRES/ATOM mapping, fragment cutting,
                                                  propagation)
  bioinformatica debug ablation                   show which specialization layers are active, with
                                                  the hashes that prove it (read-only)
  bioinformatica debug pipelines [query]          search the cached nf-core pipeline registry
                                                  (read-only)
  bioinformatica debug samplesheet <pipeline>     show an nf-core pipeline's samplesheet columns
                                                  from its schema (read-only)
  bioinformatica debug run-command <pipeline>     build the nextflow run command for an nf-core
                                                  pipeline (does not run it)
  bioinformatica debug resources                  show the recommended nf-core run resource ceiling
                                                  for this machine (read-only)
  bioinformatica debug params <pipeline> [query]  explain an nf-core pipeline's parameters from its
                                                  schema (read-only)
  bioinformatica debug diagnose [runDir]          diagnose a failed nf-core/Nextflow run from its
                                                  logs (read-only)
  bioinformatica debug runs                       list recorded nf-core runs from this project's
                                                  .bioinformatica/runs/ (read-only)
  bioinformatica debug validate [pipelines..]     validate Bioinformática.org's generic capabilities
                                                  across a curated set of nf-core pipelines
  bioinformatica debug manifest <outdir>          build a reproducibility manifest for a completed
                                                  run's outdir (read-only)
  bioinformatica debug critique <analysis>        run the adaptive critique for an analysis type
                                                  (read-only)
  bioinformatica debug report [body]              render and claim-type-check a report body,
                                                  optionally saving it (read-only unless --out)
  bioinformatica debug lint [directory]           run or parse nf-core lint results and report
                                                  contribution readiness (read-only)
  bioinformatica debug fork [pipeline] [release]  plan/record a local pipeline fork, or show its
                                                  divergence from upstream (read-only)
  bioinformatica debug hypothesis <file>          rank candidate hypotheses from a JSON file
                                                  (read-only)
  bioinformatica debug pubmed <query>             search PubMed for literature with citations
                                                  (read-only)
  bioinformatica debug gene <symbol>              look up a gene in Ensembl (read-only)
  bioinformatica debug protein <query>            search UniProt for a protein (read-only)
  bioinformatica debug structure <query>          look up a PDB structure by ID or keyword
                                                  (read-only)
  bioinformatica debug pathway <query>            find KEGG pathways by keyword (read-only)
  bioinformatica debug snapshot                   snapshot debugging utilities
  bioinformatica debug startup                    print startup timing
  bioinformatica debug agent <name>               show agent configuration details
  bioinformatica debug v2                         debug v2 catalog and built-in plugins
  bioinformatica debug info                       show debug information
  bioinformatica debug paths                      show global paths (data, config, cache, state)
  bioinformatica debug wait                       wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica providers --help 1`] = `
"bioinformatica providers

manage AI providers and credentials

Commands:
  bioinformatica providers list               list providers and credentials           [aliases: ls]
  bioinformatica providers login [url]        log in to a provider
  bioinformatica providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica agent --help 1`] = `
"bioinformatica agent

manage agents

Commands:
  bioinformatica agent create  create a new agent
  bioinformatica agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica uninstall --help 1`] = `
"bioinformatica uninstall

uninstall bioinformatica and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica serve --help 1`] = `
"bioinformatica serve

starts a headless bioinformatica server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: bioinformatica.local)
                                                          [string] [default: "bioinformatica.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica models --help 1`] = `
"bioinformatica models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica stats --help 1`] = `
"bioinformatica stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica export --help 1`] = `
"bioinformatica export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica import --help 1`] = `
"bioinformatica import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica pr --help 1`] = `
"bioinformatica pr <number>

fetch and checkout a GitHub PR branch, then run bioinformatica

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica session --help 1`] = `
"bioinformatica session

manage sessions

Commands:
  bioinformatica session list                list sessions
  bioinformatica session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica plugin --help 1`] = `
"bioinformatica plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica db --help 1`] = `
"bioinformatica db

database tools

Commands:
  bioinformatica db [query]     open an interactive sqlite3 shell or run a query           [default]
  bioinformatica db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica mcp list --help 1`] = `
"bioinformatica mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica mcp add --help 1`] = `
"bioinformatica mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica mcp auth --help 1`] = `
"bioinformatica mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  bioinformatica mcp auth list  list OAuth-capable MCP servers and their auth status   [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica mcp logout --help 1`] = `
"bioinformatica mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica providers list --help 1`] = `
"bioinformatica providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica providers login --help 1`] = `
"bioinformatica providers login [url]

log in to a provider

Positionals:
  url  bioinformatica auth provider                                                         [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica providers logout --help 1`] = `
"bioinformatica providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica agent create --help 1`] = `
"bioinformatica agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica agent list --help 1`] = `
"bioinformatica agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica session list --help 1`] = `
"bioinformatica session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica session delete --help 1`] = `
"bioinformatica session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`bioinformatica CLI help-text snapshots every documented command emits stable help text: bioinformatica db path --help 1`] = `
"bioinformatica db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
